--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "gemini-proxy",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
+  "engines": {
+    "node": ">=18"
+  },
   "dependencies": {
     "@google/genai": "^1.0.0"
   }
